5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1596_2049.log
== TEST (2019-03-26 18:43:06) 
-- CODE:
#colocamos a variavel dos numeros inteiros
x=int(input("valor de x"))
y=int(input("valor de y"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    semiperimetro= (ladotrianguloa + ladotriamgulob + ladotrianguloc) / 2
NameError: name 'ladotriamgulob' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:49:22) 
-- CODE:
#colocamos a variavel dos numeros inteiros
x=int(input("valor de x"))
y=int(input("valor de y"))
#agora colocamos a variavel do que e pedido
dividendo=x
divisor=y
quociente=x//y
resto=x%y
#basta imprimir tudo
print(dividendo)
print(divisor)
print(quociente)
print(resto)
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:49:35) 
-- CODE:
#colocamos a variavel dos numeros inteiros
x=int(input("valor de x"))
y=int(input("valor de y"))
#agora colocamos a variavel do que e pedido
dividendo=x
divisor=y
quociente=x//y
resto=x%y
#basta imprimir tudo
print(dividendo)
print(divisor)
print(quociente)
print(resto)
-- EXECUTION TIME:
0.188519
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
